[package]
name = "nfde"
version = "0.0.5"
authors = ["Bernard Teo <btzy1996@hotmail.com>"]
edition = "2018"
license = "Zlib"
repository = "https://github.com/btzy/nfde-rs"
description = "Rust bindings for Native File Dialog Extended"
keywords = ["nativefiledialog", "native", "file", "dialog"]
categories = ["api-bindings", "gui", "filesystem"]
include = ["src/**/*", "README.md", "build.rs", "nativefiledialog-extended/CMakeLists.txt", "nativefiledialog-extended/LICENSE", "nativefiledialog-extended/src/**/*"]

[build-dependencies]
cmake = "0.1"
pkg-config = "0.3"

[target.'cfg(windows)'.dependencies]
widestring = "1.0"
